# cargo-minimize

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: rust.yml
cargo_tests/a/: Cargo.toml
cargo_tests/a/src/: main.rs
full-tests/: delete-fields.rs  duplicate-self-ty-impls.rs  nested-items.rs  nested-items2.rs  reexports.rs  reexports2.rs  unused-import.rs
full-tests/to-empty-main/: Cargo.toml
full-tests/to-empty-main/src/: main.rs
prettyplease-forked/: Cargo.toml
prettyplease-forked/src/: expr.rs  item.rs  pat.rs  ty.rs
src/: build.rs  dylib_flag.rs  everybody_loops.rs  expand.rs  formatting.rs  lib.rs  main.rs  privatize.rs  processor.rs  tree_sitter.rs
src/passes/: everybody_loops.rs  field_deleter.rs  item_deleter.rs  mod.rs  privatize.rs  split_use.rs
src/processor/: checker.rs  files.rs  mod.rs  reaper.rs
test-cases/unused-code/: Cargo.toml
test-cases/unused-code/src/: main.rs  other.rs
test-cases/unused-code/src/folder/: mod.rs
test-cases/uwu/: Cargo.toml
test-cases/uwu/src/: main.rs
tests/: always_success.sh  full_tests.rs  helper.rs  minimize.rs
testsuite/: Cargo.toml  README.md
testsuite/src/: lib.rs
tstest/: Cargo.toml
tstest/src/: main.rs
