[workspace]
exclude = ["test-cases/*"]

[package]
name = "cargo-minimize"
version = "0.1.0"
edition = "2021"
description = "A tool for minimizing rustc ICEs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
cargo = "0.65.0"
clap = { version = "4.0.29", features = ["derive"] }
prettyplease = "0.1.19"
proc-macro2 = { version = "1.0.48", features = ["span-locations"] }
quote = "1.0.21"
rustfix = "0.6.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
syn = { version = "1.0.101", features = ["full", "visit", "visit-mut"] }
tempfile = "3.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
walkdir = "2.3.2"

[target."cfg(unix)".dependencies]
libc = "0.2.138"
