[workspace]
members = ["./", "./testsuite"]
exclude = ["full-tests/*"]

[package]
name = "cargo-minimize"
version = "0.1.0"
edition = "2021"
categories = ["development-tools"]
description = "A tool for minimizing rustc ICEs"
keywords = ["minimization", "ICE", "rust-development"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[profile.dev.package.proc-macro2]
opt-level = 3
[profile.dev.package.syn]
opt-level = 3
[profile.dev.package.genemichaels]
opt-level = 3

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.29", features = ["derive"] }
ctrlc = "3.2.5"
genemichaels = "0.1.21"
libloading = "0.8.0"
owo-colors = "3.5.0"
proc-macro2 = { version = "1.0.48", features = ["span-locations"] }
quote = "1.0.23"
rustfix = "0.6.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
syn = { version = "1.0.101", features = ["full", "visit-mut"] }
tempfile = "3.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
tree-sitter = "0.20.10"
tree-sitter-edit = "0.3.0"
tree-sitter-rust = "0.20.4"
walkdir = "2.3.2"
