[package]
name = "testsuite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
fs_extra = "1.3.0"
once_cell = "1.17.1"
rayon = "1.7.0"
regex = "1.7.3"
tempfile = "3.5.0"
walkdir = "2.3.3"
